docs_source/v1.2/Integrations/attribution/branch.md
---
title: "Branch"
slug: "branch"
excerpt: "Integrate Purchases SDK with Branch"
hidden: false
createdAt: "2018-12-13T18:49:53.008Z"
updatedAt: "2018-12-17T21:16:34.067Z"
---
With our Branch integration you can:
* Accurately track subscriptions generated from Branch campaigns, allowing you to know precisely how much revenue your campaigns generate.
* Send trial conversions and renewals directly from RevenueCat to Branch, allowing for tracking without an app open.
* Continue to follow your cohorts for months to know the long tail revenue generated by your campaigns.
[block:callout]
{
  "type": "success",
  "body": "This section assumes you've followed our [Quickstart](doc:getting-started-1) section of our Getting Started guide to install and configure our SDK."
}
[/block]

[block:api-header]
{
  "title": "Send purchase data to Branch"
}
[/block]
When initialize a `Branch` session use the `addAttributionData` method for passing the attribution data dictionary in the callback:

### Attaching attribution data to a user
[block:code]
{
  "codes": [
    {
      "code": "import Branch\n...\nBranch.getInstance().initSession(launchOptions: launchOptions) { (data, error) in\n    if let data = data {\n        self.purchases?.addAttributionData(data, from: .branch)\n    }\n}",
      "language": "swift",
      "name": "Swift"
    },
    {
      "code": "#import \"Branch/Branch.h\"\n...\n[[Branch getInstance] initSessionWithLaunchOptions:launchOptions\n                        andRegisterDeepLinkHandler:^(NSDictionary *data,\n                                                     NSError *error) {\n  [self.purchases addAttributionData:data \n                         fromNetwork:RCAttributionNetworkBranch];\n}];",
      "language": "objectivec",
      "name": "Objective-C"
    },
    {
      "code": "Branch branch = Branch.getInstance(getApplicationContext());\nbranch.initSession(new BranchReferralInitListener(){\n    @Override\n    public void onInitFinished(JSONObject referringParams, BranchError error) {\n        if (error == null) {\n          purchases.addAttributionData(referringParams, \n                                       Purchases.AttributionNetwork.BRANCH);\n        } else {\n            Log.i(\"MyApp\", error.getMessage());\n        }\n    }\n}, this.getIntent().getData(), this);",
      "language": "java"
    },
    {
      "code": "// Psuedo Example\nlet attributionData = await Attribution.getConversionData();\nPurchases.addAttributionData(attributionData, Purchases.ATTRIBUTION_NETWORKS.APPSFLYER);",
      "language": "javascript",
      "name": "ReactNative"
    },
    {
      "code": "void SendAttribution()\n{\n  Purchases purchases = GetComponent<Purchases>();\n  Purchases.AdjustData data = new Purchases.AdjustData();\n\n  data.adid = \"test\";\n  data.network = \"network\";\n  data.adgroup = \"adgroup\";\n  data.campaign = \"campaign\";\n  data.creative = \"creative\";\n  data.clickLabel = \"clickLabel\";\n  data.trackerName = \"trackerName\";\n  data.trackerToken = \"trackerToken\";\n\n  purchases.AddAdjustAttributionData(data);\n}",
      "language": "csharp",
      "name": "Unity"
    }
  ]
}
[/block]
#### Advertising Identifiers
In order for Branch to forward revenue information to 3rd party partners, you need the iOS IDFA or Google Play AdId. To forward this to RevenueCat, add the `rc_idfa` or `rc_gps_adid` key to the attribution params *before* calling the `addAttributionData` method: 
[block:code]
{
  "codes": [
    {
      "code": "import Branch\nimport AdSupport\n...\nBranch.getInstance().initSession(launchOptions: launchOptions) { (data, error) in\n    if var data = data {\n        let idfa = ASIdentifierManager.shared().advertisingIdentifier.uuidString\n        data[\"rc_idfa\"] = idfa\n        self.purchases?.addAttributionData(data, from: .branch)\n    }\n}",
      "language": "swift"
    },
    {
      "code": "#import \"Branch/Branch.h\"\n#import <AdSupport/ASIdentifierManager.h>\n...\n[[Branch getInstance] initSessionWithLaunchOptions:launchOptions\n                        andRegisterDeepLinkHandler:^(NSDictionary *data,\n                                                     NSError *error) {\n  \n  NSDictionary *attributionData = data;\n  NSString *idfa = ASIdentifierManager.sharedManager.advertisingIdentifier.UUIDString;\n  if (idfa) {\n    NSMutableDictionary *newData = [NSMutableDictionary dictionaryWithDictionary:attributionData];\n    newData[@\"rc_idfa\"] = idfa;\n    attributionData = [NSDictionary dictionaryWithDictionary:newData];\n  }\n  [self.purchases addAttributionData:attributionData \n                         fromNetwork:RCAttributionNetworkBranch];\n}];",
      "language": "objectivec"
    },
    {
      "code": "import com.google.android.gms.ads.identifier.AdvertisingIdClient;\nimport com.google.android.gms.ads.identifier.AdvertisingIdClient.Info;\n...\nBranch branch = Branch.getInstance(getApplicationContext());\nbranch.initSession(new BranchReferralInitListener(){\n    @Override\n    public void onInitFinished(JSONObject referringParams, BranchError error) {\n        if (error == null) {\n          \n          Info adInfo = null;\n          try {\n            adInfo = AdvertisingIdClient.getAdvertisingIdInfo(context);\n\n          } catch (IOException e) {\n            // Unrecoverable error connecting to Google Play services (e.g.,\n            // the old version of the service doesn't support getting AdvertisingId).\n\n          } catch (GooglePlayServicesAvailabilityException e) {\n            // Encountered a recoverable error connecting to Google Play services. \n\n          } catch (GooglePlayServicesNotAvailableException e) {\n            // Google Play services is not available entirely.\n          }\n\n          referringParams.put(\"rc_gps_adid\", adInfo.getId());\n          \n          purchases.addAttributionData(referringParams, \n                                       Purchases.AttributionNetwork.BRANCH);\n        } else {\n            Log.i(\"MyApp\", error.getMessage());\n        }\n    }\n}, this.getIntent().getData(), this);",
      "language": "java"
    }
  ]
}
[/block]