docs_source/v2.0/Integrations/attribution/branch.md
---
title: "Branch"
slug: "branch"
excerpt: "Integrate Purchases SDK with Branch"
hidden: false
createdAt: "2018-12-13T18:49:53.008Z"
updatedAt: "2019-03-12T21:53:05.490Z"
---
With our Branch integration you can:
* Accurately track subscriptions generated from Branch campaigns, allowing you to know precisely how much revenue your campaigns generate.
* Send trial conversions and renewals directly from RevenueCat to Branch, allowing for tracking without an app open.
* Continue to follow your cohorts for months to know the long tail revenue generated by your campaigns.
[block:callout]
{
  "type": "success",
  "body": "This section assumes you've followed our [Quickstart](doc:getting-started-1) section of our Getting Started guide to install and configure our SDK."
}
[/block]

[block:api-header]
{
  "title": "1. Set Branch user identity"
}
[/block]
In order to attach attribution data to the correct user, make sure the App User Ids for RevenueCat and Branch match. You can set the Branch identity to match the *Purchases* App User Id whether you're providing your own ids or using our randomly generated ids.
[block:code]
{
  "codes": [
    {
      "code": "// login\nBranch.getInstance().setIdentity(\"my_app_user_id\")\n\n// logout\nBranch.getInstance().logout()",
      "language": "swift"
    },
    {
      "code": "// login\n[[Branch getInstance] setIdentity:@\"your_user_id\"];\n\n// logout\n[[Branch getInstance] logout];",
      "language": "objectivec"
    },
    {
      "code": "// login\nBranch.getInstance().setIdentity(\"your_user_id\");\n\n// logout\nBranch.getInstance().logout();",
      "language": "java"
    },
    {
      "code": "import branch from 'react-native-branch'\n  \nbranch.setIdentity('your_user_id')",
      "language": "javascript",
      "name": "React Native"
    }
  ]
}
[/block]

[block:api-header]
{
  "title": "2. Send attribution data to RevenueCat"
}
[/block]
When initialize a `Branch` session use the `addAttributionData` method for passing the attribution data dictionary in the callback:

### Attaching attribution data to a user
[block:code]
{
  "codes": [
    {
      "code": "import Branch\n...\nBranch.getInstance().initSession(launchOptions: launchOptions) { (data, error) in\n    if let data = data {\n        Purchases.shared.addAttributionData(data, from: .branch)\n    }\n}",
      "language": "swift",
      "name": "Swift"
    },
    {
      "code": "#import \"Branch/Branch.h\"\n...\n[[Branch getInstance] initSessionWithLaunchOptions:launchOptions\n                        andRegisterDeepLinkHandler:^(NSDictionary *data,\n                                                     NSError *error) {\n  [[RCPurchases shared] addAttributionData:data \n                         fromNetwork:RCAttributionNetworkBranch];\n}];",
      "language": "objectivec",
      "name": "Objective-C"
    },
    {
      "code": "Branch branch = Branch.getInstance(getApplicationContext());\nbranch.initSession(new BranchReferralInitListener(){\n    @Override\n    public void onInitFinished(JSONObject referringParams, BranchError error) {\n        if (error == null) {\n          Purchases.getSharedInstance().addAttributionData(referringParams, \n                                       Purchases.AttributionNetwork.BRANCH);\n        } else {\n            Log.i(\"MyApp\", error.getMessage());\n        }\n    }\n}, this.getIntent().getData(), this);",
      "language": "java"
    },
    {
      "code": "// Psuedo Example\nimport branch from 'react-native-branch'\n  \nbranch.subscribe(({ error, params }) => {\n  if (error) {\n    console.error('Error from Branch: ' + error)\n    return\n  }\n\n  // params will never be null if error is null\n\n  if (params['+non_branch_link']) {\n    const nonBranchUrl = params['+non_branch_link']\n    // Route non-Branch URL if appropriate.\n    return\n  }\n\n  if (!params['+clicked_branch_link']) {\n    // Indicates initialization success and some other conditions.\n    // No link was opened.\n    return\n  }\n\n  // A Branch link was opened.\n  // Route link based on data in params.\n  Purchases.sharedInstance.addAttributionData(params, Purchases.ATTRIBUTION_NETWORKS.BRANCH);\n})",
      "language": "javascript",
      "name": "ReactNative"
    },
    {
      "code": "void SendAttribution()\n{\n  Purchases purchases = GetComponent<Purchases>();\n  Purchases.AdjustData data = new Purchases.AdjustData();\n\n  data.adid = \"test\";\n  data.network = \"network\";\n  data.adgroup = \"adgroup\";\n  data.campaign = \"campaign\";\n  data.creative = \"creative\";\n  data.clickLabel = \"clickLabel\";\n  data.trackerName = \"trackerName\";\n  data.trackerToken = \"trackerToken\";\n\n  Purchases.sharedInstance.AddAdjustAttributionData(data);\n}",
      "language": "csharp",
      "name": "Unity"
    }
  ]
}
[/block]
#### Advertising Identifiers
In order for Branch to forward revenue information to 3rd party partners, you need the iOS IDFA or Google Play AdId. To forward this to RevenueCat, add the `rc_idfa` or `rc_gps_adid` key to the attribution params *before* calling the `addAttributionData` method: 
[block:code]
{
  "codes": [
    {
      "code": "import Branch\nimport AdSupport\n...\nBranch.getInstance().initSession(launchOptions: launchOptions) { (data, error) in\n    if var data = data {\n        let idfa = ASIdentifierManager.shared().advertisingIdentifier.uuidString\n        data[\"rc_idfa\"] = idfa\n        Purchases.shared.addAttributionData(data, from: .branch)\n    }\n}",
      "language": "swift"
    },
    {
      "code": "#import \"Branch/Branch.h\"\n#import <AdSupport/ASIdentifierManager.h>\n...\n[[Branch getInstance] initSessionWithLaunchOptions:launchOptions\n                        andRegisterDeepLinkHandler:^(NSDictionary *data,\n                                                     NSError *error) {\n  \n  NSMutableDictionary *attributionData = data;\n\n  NSString *idfa = ASIdentifierManager.sharedManager.advertisingIdentifier.UUIDString;\n\n  [attributionData setValue:ASIdentifierManager.sharedManager.advertisingIdentifier.UUIDString\n                     forKey:@\"rc_idfa\"];\n\n  [[RCPurchases sharedPurchases] addAttributionData:attributionData\n                               fromNetwork:RCAttributionNetworkBranch];\n}];",
      "language": "objectivec"
    },
    {
      "code": "import com.google.android.gms.ads.identifier.AdvertisingIdClient;\nimport com.google.android.gms.ads.identifier.AdvertisingIdClient.Info;\n...\nBranch branch = Branch.getInstance(getApplicationContext());\nbranch.initSession(new BranchReferralInitListener(){\n    @Override\n    public void onInitFinished(JSONObject referringParams, BranchError error) {\n        if (error == null) {\n          \n          Info adInfo = null;\n          try {\n            adInfo = AdvertisingIdClient.getAdvertisingIdInfo(context);\n\n          } catch (IOException e) {\n            // Unrecoverable error connecting to Google Play services (e.g.,\n            // the old version of the service doesn't support getting AdvertisingId).\n\n          } catch (GooglePlayServicesAvailabilityException e) {\n            // Encountered a recoverable error connecting to Google Play services. \n\n          } catch (GooglePlayServicesNotAvailableException e) {\n            // Google Play services is not available entirely.\n          }\n\n          referringParams.put(\"rc_gps_adid\", adInfo.getId());\n          \n          Purchases.getSharedInstance().addAttributionData(referringParams, \n                                       Purchases.AttributionNetwork.BRANCH);\n        } else {\n            Log.i(\"MyApp\", error.getMessage());\n        }\n    }\n}, this.getIntent().getData(), this);",
      "language": "java"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "danger",
  "body": "Make sure to remove all client side tracking of revenue. Since RevenueCat will be sending events for all revenue actions, tracking purchases with the Branch SDK directly can lead to double counting of revenue in Branch.",
  "title": "Remove SDK Purchase Tracking"
}
[/block]

[block:api-header]
{
  "title": "3.  Send RevenueCat events into Branch"
}
[/block]
After you've set up the *Purchase* SDK to send attribution data from Branch to RevenueCat, you can "turn on" the integration and configure the event tokens from the RevenueCat dashboard.

1. Navigate to your app in the RevenueCat dashboard and choose 'Branch' from the integrations menu. 
2. Add your test key and live key from Branch
3. Enter the event names that RevenueCat will send or choose the default event names
4. Select whether you want RevenueCat to report proceeds (after app store cut) or revenue (gross sales)
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/a3b19b2-branch.png",
        "branch.png",
        1685,
        2370,
        "#fafafa"
      ],
      "caption": "Branch configuration screen"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "success",
  "title": "You've done it!",
  "body": "You should start seeing events from RevenueCat appear in Branch"
}
[/block]